# nik_courier_admin

./: .env_docker  .env_docker_example  .env_docker_main  .env_example  .env_main  .gitignore  Dockerfile  README.md  db.json  docker-compose.yaml  entrypoint.sh  init_db.json  pyproject.toml
.github/workflows/: main.yml
adminpanel/: asgi.py  celery.py  constants.py  settings.py  urls.py  wsgi.py
applications/: admin.py  apps.py  models.py
applications/migrations/: 0001_initial.py  0002_remove_processingapplication_created_at_and_more.py
apps/applications/: apps.py  consumers.py  models.py  services.py  urls.py  views.py
apps/bot/: admin.py  models.py
apps/broadcast/: models.py
apps/geo/: apps.py  models.py
apps/users/: admin.py  models.py  services.py
apps/vacancies/: admin.py  apps.py  models.py
bot/: models.py
bot/migrations/: 0001_initial.py
broadcast/: admin.py  apps.py  models.py
broadcast/migrations/: 0001_initial.py
fixtures/: init_db.json  initial_data.json
geo/: admin.py  apps.py  models.py
geo/migrations/: 0001_initial.py
tg_bot/: main.py  tasks.py
tg_bot/core/: config.py  constants.py  logger.py  pagination.py
tg_bot/middlewares/: access.py
tg_bot/scheduler/: __init__.py  broadcast.py
tg_bot/utils/: __init__.py  applies_get.py  apply_existance.py  apply_processing.py  bitrix.py  bot_config.py  pagination.py  scheduler.py
users/: admin.py  models.py
users/migrations/: 0001_initial.py  0002_partner_balance_partner_proccess_type_and_more.py  0003_alter_partner_balance.py  (+3 more)
vacancies/: admin.py  apps.py  models.py
(+56 files in other folders)
