[tool.poetry]
name = "nik-courier-admin"
version = "0.1.0"
description = ""
authors = ["SowaSova <cei4bio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.32.0"
django = "^5.1.3"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.10"
aiogram = "^3.14.0"
pydantic-settings = "^2.6.1"
whitenoise = "^6.8.2"
channels = "^4.2.0"
redis = "^5.2.0"
celery = "^5.4.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
